More fight changes, attacks work